--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body, html {
     font-weight: normal;
     text-align: center;
     margin-bottom: auto;
-    transform: translateY(700%);
+    transform: translateY(20vh);
     display: none;
     text-shadow: 
         0 0 10px rgba(255, 255, 255, 0.8), 
